<resources>
    <string name="app_name">My Application</string>
    <string name="continuar">Continuar</string>
    <string name="sexo">Sexo</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="_24_04_2005">24/04/2005</string>
    <string name="edad">Edad</string>
    <string name="altura_y_peso">Altura y Peso</string>
    <string name="introduce_tu_altura">Introduce tu altura</string>
    <string name="introduce_tu_peso">Introduce tu peso</string>
    <string name="que_nivel_de_actividad_realizas">¿Que nivel de actividad realizas?</string>
    <string name="objectiu">Objectiu</string>
    <string name="nombre">Nombre</string>
    <string name="escribe_tu_nombre">Escribe tu nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="escribe_tus_apellidos">Escribe tus apellidos</string>
    <string name="email">Email</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="al_hacer_clic_en_continuar_aceptas_nuestros_t_rminos_de_servicio_y_nuestra_pol_tica_de_privacidad">Al hacer clic en continuar, aceptas nuestros Términos de Servicio y nuestra Política de Privacidad</string>
    <string name="registrarse">Registrarse</string>
    <string name="repetir_contrase_a">repetir contraseña</string>
    <string name="contrase_a">contraseña</string>
    <string name="email_domain_com">email@domain.com</string>
    <string name="introduce_tu_correo_electr_nico_para_registrarte_en_esta_aplicaci_n">Introduce tu correo electrónico para registrarte en esta aplicación</string>
    <string name="crear_una_cuenta">Crear una cuenta</string>
    <string name="kalories">Kalories</string>
    <string name="made_by_vazgen_and_francisco">Made by Vazgen and Francisco</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="example_mail_com">example_gmail_com</string>
    <string name="log_in">Log In</string>
    <string name="seguimiento_de_peso">SEGUIMIENTO DE PESO (KG)</string>
    <string name="registro_diario">REGISTRO DIARIO</string>
    <string name="_50kg">50Kg</string>
    <string name="configuraci_n">Configuración</string>
    <string name="cerrar_sessi_n">Cerrar Sessión</string>
</resources>