<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactUs">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/edittext_black_border"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="45dp"
        android:paddingHorizontal="10dp"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/white"
            />

        <EditText
            android:id="@+id/etNomContacte"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:background="@color/white"
            android:paddingEnd="170dp"
            android:paddingStart="15dp"
            android:hint="@string/escribe_tu_nombre"
            android:textSize="15sp"
            android:inputType="date"
            android:layout_marginBottom="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apellidos"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/white"
            />

        <EditText
            android:id="@+id/etApellidosContacte"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:background="@color/white"
            android:paddingStart="15dp"
            android:hint="@string/escribe_tus_apellidos"
            android:textSize="15sp"
            android:inputType="text"
            android:layout_marginBottom="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/white"
            />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:background="@color/white"
            android:paddingStart="15dp"
            android:hint="@string/example_gmail_com"
            android:textSize="15sp"
            android:inputType="text"
            android:layout_marginBottom="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mensaje"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/white"
            />

        <EditText
            android:paddingTop="15dp"
            android:gravity="top"
            android:id="@+id/etMensaje"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/white"
            android:paddingStart="15dp"
            android:hint="Tu consulta"
            android:textSize="15sp"
            android:inputType="text"
            android:layout_marginBottom="10dp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:text="@string/continuar"
            android:backgroundTint="@color/black"
            app:layout_constraintStart_toStartOf="@id/etMensaje"
            android:layout_marginTop="30dp"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>