<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        >
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:backgroundTint="@color/darkGreen"
            android:text="@string/seguimiento_de_peso"
            app:cornerRadius="8dp"
            android:textSize="40sp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="18dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_50kg"
            android:textSize="60sp"
            android:textColor="@color/brownSoft"
            android:textStyle="bold"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:backgroundTint="@color/darkGreen"
            android:text="@string/registro_diario"
            app:cornerRadius="8dp"
            android:textSize="40sp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="18dp"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/configuraci_n"
            android:backgroundTint="@color/brownSoft"
            app:cornerRadius="8dp"
            android:textSize="17sp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="18dp"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/cerrar_sessi_n"
            android:backgroundTint="@color/brownSoft"
            app:cornerRadius="8dp"
            android:textSize="17sp"
            android:layout_marginHorizontal="18dp"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Contacto"
            android:backgroundTint="@color/brownSoft"
            app:cornerRadius="8dp"
            android:textSize="17sp"
            android:layout_marginHorizontal="18dp"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>