<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HeightAndWeight"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altura_y_peso"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginVertical="15dp"
        android:textColor="@color/diedGreen"
        app:layout_constraintBottom_toTopOf="@id/ll1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginHorizontal="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/introduce_tu_altura"
                android:textSize="12dp"
                android:textStyle="bold"
                />
            <NumberPicker
                android:layout_width="120dp"
                android:layout_height="60dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginHorizontal="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/introduce_tu_peso"
                android:textSize="12dp"
                android:textStyle="bold"
                />
            <NumberPicker
                android:layout_width="120dp"
                android:layout_height="60dp"
                />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:text="@string/continuar"
        android:backgroundTint="@color/darkGreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll1"
        android:layout_marginVertical="30dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>